# arsenalgear-cpp

./: .all-contributorsrc  .gitignore  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  Makefile  README.md  docker-compose.yml
.github/workflows/: DocGenerator.yml  codeql-analysis-macos.yml  codeql-analysis-ubuntu.yml  codeql-analysis-windows.yml  codeql-analysis.yml  test-compiler-versions.yml
arsenalgear/: math.hpp  stream.hpp  utils.hpp
cmake/: Config.cmake.in
doc/: Code structure.md  Download, install and run.md  Download-install-run.md  Reposiotry-structure.md
docs/: annotated.html  classagr_1_1savebuf-members.html  classagr_1_1savebuf.html  classagr_1_1savebuf__coll__graph.md5  classagr_1_1savebuf__inherit__graph.map  classes.html  constants_8hpp.html  constants_8hpp_source.html  containers_8hpp.html  containers_8hpp__incl.map  containers_8hpp__incl.md5  containers_8hpp_source.html  dir_000001_000000.html  dir_000002_000000.html  dir_15782bd83e2aa14e39e35b8e8d02f94f.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_2.map  inherit_graph_2.md5  inherit_graph_3.map  inherit_graph_3.md5  inherit_graph_4.map  inherit_graph_4.md5  inherits.html  math_8hpp.html  math_8hpp__incl.map  (+62 more)
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  classes_1.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  namespaces_0.js  searchdata.js  (+3 more)
examples/: containers.cpp  math.cpp  operators.cpp  stream.cpp  system.cpp  type.cpp  utils.cpp
include/: constants.hpp  containers.hpp  math.hpp  operators.hpp  stream.hpp  system.hpp  type.hpp  utils.hpp
include/arsenalgear/: constants.hpp  containers.hpp  math.hpp  operators.hpp  stream.hpp  system.hpp  type.hpp  utils.hpp
scripts/: debug.sh  install.sh  uninstall.sh  update.sh
scripts/cmake/: arsenalgearConfig.cmake
src/: examples.cpp  operators.cpp  stream.cpp  system.cpp  utils.cpp
test/: CMakeLists.txt  IWYU.sh  all_tests.sh  include_tests.sh  tests_containers.cpp  tests_math.cpp  tests_operators.cpp  tests_stream.cpp  tests_type.cpp  tests_utils.cpp
test/system_tests/: CMakeLists.txt  containers.cpp  math.cpp  operators.cpp  stream.cpp  system.cpp  type.cpp  utils.cpp
test/unit_tests/: CMakeLists.txt  tests_containers.cpp  tests_math.cpp  tests_operators.cpp  tests_stream.cpp  tests_system.cpp  tests_type.cpp  tests_utils.cpp
